--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/leetcode/Solution_\u4E24\u6570\u76F8\u52A0.java=UTF-8
+encoding//src/leetcode/Solution_\u65E0\u91CD\u590D\u5B57\u7B26\u7684\u6700\u957F\u5B50\u4E32.java=UTF-8
