--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,9 @@
 eclipse.preferences.version=1
 encoding//src/leetcode/Solution_\u4E24\u6570\u76F8\u52A0.java=UTF-8
+encoding//src/leetcode/Solution_\u6570\u5B57\u53CD\u8F6C.java=UTF-8
 encoding//src/leetcode/Solution_\u65E0\u91CD\u590D\u5B57\u7B26\u7684\u6700\u957F\u5B50\u4E32.java=UTF-8
+encoding//src/leetcode/Solution_\u65E0\u91CD\u590D\u5B57\u7B26\u7684\u6700\u957F\u5B50\u4E32_\u79FB\u52A8\u7A97\u53E3.java=UTF-8
+encoding//src/leetcode/Solution_\u6700\u957F\u56DE\u6587\u5B50\u4E32_\u52A8\u6001\u89C4\u5212.java=UTF-8
+encoding//src/leetcode/Solution_\u6700\u957F\u56DE\u6587\u5B50\u4E32_\u66B4\u529B\u6CD5.java=UTF-8
+encoding//src/leetcode/Solution_\u6700\u957F\u56DE\u6587\u5B50\u4E32_\u6700\u957F\u516C\u5171\u5B50\u4E32.java=UTF-8
+encoding//src/leetcode/Solution_\u76DB\u6700\u591A\u6C34\u7684\u5BB9\u5668_\u66B4\u529B\u6CD5.java=UTF-8
