--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -8,3 +8,4 @@ encoding//src/leetcode/No05_Solution_\u6700\u957F\u56DE\u6587\u5B50\u4E32_\u6700
 encoding//src/leetcode/No07_Solution_\u6570\u5B57\u53CD\u8F6C.java=UTF-8
 encoding//src/leetcode/No11_Solution_\u76DB\u6700\u591A\u6C34\u7684\u5BB9\u5668_\u66B4\u529B\u6CD5.java=UTF-8
 encoding//src/leetcode/No15_Solution_\u4E09\u6570\u4E4B\u548C.java=UTF-8
+encoding//src/leetcode/No16_Solution_\u6700\u63A5\u8FD1\u7684\u4E09\u6570\u4E4B\u548C.java=UTF-8
