--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,3 +9,7 @@ encoding//src/leetcode/No07_Solution_\u6570\u5B57\u53CD\u8F6C.java=UTF-8
 encoding//src/leetcode/No11_Solution_\u76DB\u6700\u591A\u6C34\u7684\u5BB9\u5668_\u66B4\u529B\u6CD5.java=UTF-8
 encoding//src/leetcode/No15_Solution_\u4E09\u6570\u4E4B\u548C.java=UTF-8
 encoding//src/leetcode/No16_Solution_\u6700\u63A5\u8FD1\u7684\u4E09\u6570\u4E4B\u548C.java=UTF-8
+encoding//src/leetcode/No17_Solution_\u7535\u8BDD\u53F7\u7801\u7684\u5B57\u6BCD\u7EC4\u5408.java=UTF-8
+encoding//src/leetcode/No39_Solution_\u7EC4\u5408\u603B\u548C.java=UTF-8
+encoding//src/leetcode/No39_Solution_\u7EC4\u5408\u603B\u548C_\u4F8B\u5B50.java=UTF-8
+encoding//src/leetcode/No39_Solution_\u7EC4\u5408\u603B\u548C_\u4FEE\u6539.java=UTF-8
