--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,3 +13,5 @@ encoding//src/leetcode/No17_Solution_\u7535\u8BDD\u53F7\u7801\u7684\u5B57\u6BCD\
 encoding//src/leetcode/No39_Solution_\u7EC4\u5408\u603B\u548C.java=UTF-8
 encoding//src/leetcode/No39_Solution_\u7EC4\u5408\u603B\u548C_\u4F8B\u5B50.java=UTF-8
 encoding//src/leetcode/No39_Solution_\u7EC4\u5408\u603B\u548C_\u4FEE\u6539.java=UTF-8
+encoding//src/leetcode/No40_Solution_\u7EC4\u5408\u603B\u548C.java=UTF-8
+encoding//src/leetcode/No55_Solution_\u8DF3\u8DC3\u6E38\u620F.java=UTF-8
