--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,9 +10,17 @@ encoding//src/leetcode/No11_Solution_\u76DB\u6700\u591A\u6C34\u7684\u5BB9\u5668_
 encoding//src/leetcode/No15_Solution_\u4E09\u6570\u4E4B\u548C.java=UTF-8
 encoding//src/leetcode/No16_Solution_\u6700\u63A5\u8FD1\u7684\u4E09\u6570\u4E4B\u548C.java=UTF-8
 encoding//src/leetcode/No17_Solution_\u7535\u8BDD\u53F7\u7801\u7684\u5B57\u6BCD\u7EC4\u5408.java=UTF-8
+encoding//src/leetcode/No20_Solution_\u6709\u6548\u7684\u62EC\u53F7.java=UTF-8
+encoding//src/leetcode/No22_Solution_\u62EC\u53F7\u751F\u6210.java=UTF-8
 encoding//src/leetcode/No37_Solution_\u89E3\u6570\u72EC.java=UTF-8
 encoding//src/leetcode/No39_Solution_\u7EC4\u5408\u603B\u548C.java=UTF-8
 encoding//src/leetcode/No39_Solution_\u7EC4\u5408\u603B\u548C_\u4F8B\u5B50.java=UTF-8
 encoding//src/leetcode/No39_Solution_\u7EC4\u5408\u603B\u548C_\u4FEE\u6539.java=UTF-8
 encoding//src/leetcode/No40_Solution_\u7EC4\u5408\u603B\u548C.java=UTF-8
+encoding//src/leetcode/No53_Solution_\u6700\u5927\u5B50\u5E8F\u548C.java=UTF-8
+encoding//src/leetcode/No53_Solution_\u6700\u5927\u5B50\u5E8F\u548Cn.java=UTF-8
 encoding//src/leetcode/No55_Solution_\u8DF3\u8DC3\u6E38\u620F.java=UTF-8
+encoding//src/leetcode/No62_Solution_\u4E0D\u540C\u8DEF\u5F84_\u52A8\u6001\u89C4\u5212.java=UTF-8
+encoding//src/leetcode/No63_Solution_\u4E0D\u540C\u8DEF\u5F842.java=UTF-8
+encoding//src/leetcode/No70_Solution_\u722C\u697C\u68AF.java=UTF-8
+encoding//src/leetcode/No75_Solution_\u989C\u8272\u5206\u7C7B.java=UTF-8
