--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,12 +13,14 @@ encoding//src/leetcode/no001_099/No17_Solution_\u7535\u8BDD\u53F7\u7801\u7684\u5
 encoding//src/leetcode/no001_099/No20_Solution_\u6709\u6548\u7684\u62EC\u53F7.java=UTF-8
 encoding//src/leetcode/no001_099/No22_Solution_\u62EC\u53F7\u751F\u6210.java=UTF-8
 encoding//src/leetcode/no001_099/No28_Solution_\u5B9E\u73B0strStr.java=UTF-8
+encoding//src/leetcode/no001_099/No29_Solution_\u4E24\u6570\u76F8\u9664.java=UTF-8
 encoding//src/leetcode/no001_099/No37_Solution_\u89E3\u6570\u72EC.java=UTF-8
 encoding//src/leetcode/no001_099/No39_Solution_\u7EC4\u5408\u603B\u548C.java=UTF-8
 encoding//src/leetcode/no001_099/No39_Solution_\u7EC4\u5408\u603B\u548C_\u4F8B\u5B50.java=UTF-8
 encoding//src/leetcode/no001_099/No39_Solution_\u7EC4\u5408\u603B\u548C_\u4FEE\u6539.java=UTF-8
 encoding//src/leetcode/no001_099/No40_Solution_\u7EC4\u5408\u603B\u548C.java=UTF-8
 encoding//src/leetcode/no001_099/No53_Solution_\u6700\u5927\u5B50\u5E8F\u548C.java=UTF-8
+encoding//src/leetcode/no001_099/No53_Solution_\u6700\u5927\u5B50\u5E8F\u548C_\u52A8\u6001\u89C4\u5212.java=UTF-8
 encoding//src/leetcode/no001_099/No53_Solution_\u6700\u5927\u5B50\u5E8F\u548Cn.java=UTF-8
 encoding//src/leetcode/no001_099/No55_Solution_\u8DF3\u8DC3\u6E38\u620F.java=UTF-8
 encoding//src/leetcode/no001_099/No62_Solution_\u4E0D\u540C\u8DEF\u5F84_\u52A8\u6001\u89C4\u5212.java=UTF-8
