--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -25,5 +25,6 @@ encoding//src/leetcode/no001_099/No62_Solution_\u4E0D\u540C\u8DEF\u5F84_\u52A8\u
 encoding//src/leetcode/no001_099/No63_Solution_\u4E0D\u540C\u8DEF\u5F842.java=UTF-8
 encoding//src/leetcode/no001_099/No70_Solution_\u722C\u697C\u68AF.java=UTF-8
 encoding//src/leetcode/no001_099/No75_Solution_\u989C\u8272\u5206\u7C7B.java=UTF-8
+encoding//src/leetcode/no101_200/No120_Solution_\u4E09\u89D2\u5F62\u6700\u5C0F\u8DEF\u5F84\u548C.java=UTF-8
 encoding//src/leetcode/no200_299/No223_Solution_\u77E9\u5F62\u9762\u79EF.java=UTF-8
 encoding//src/leetcode/no300_499/No417_Solution_\u592A\u5E73\u6D0B\u5927\u897F\u6D0B\u6C34\u6D41\u95EE\u9898_dp.java=UTF-8
