--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -14,6 +14,7 @@ encoding//src/leetcode/no001_099/No20_Solution_\u6709\u6548\u7684\u62EC\u53F7.ja
 encoding//src/leetcode/no001_099/No22_Solution_\u62EC\u53F7\u751F\u6210.java=UTF-8
 encoding//src/leetcode/no001_099/No28_Solution_\u5B9E\u73B0strStr.java=UTF-8
 encoding//src/leetcode/no001_099/No29_Solution_\u4E24\u6570\u76F8\u9664.java=UTF-8
+encoding//src/leetcode/no001_099/No36_Solution_\u6709\u6548\u7684\u6570\u72EC.java=UTF-8
 encoding//src/leetcode/no001_099/No37_Solution_\u89E3\u6570\u72EC.java=UTF-8
 encoding//src/leetcode/no001_099/No39_Solution_\u7EC4\u5408\u603B\u548C.java=UTF-8
 encoding//src/leetcode/no001_099/No39_Solution_\u7EC4\u5408\u603B\u548C_\u4F8B\u5B50.java=UTF-8
